# omni-eda

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
examples/: advanced_usage.py  basic_usage.py  eda_demo.py
omni_eda/: __init__.py  ab_testing.py  advanced_correlation.py  analyzer.py  anomaly.py  causal.py  cleaning.py  cli.py  clustering.py  complexity.py  config.py  correlation.py  dashboard.py  dependency.py  detection.py  distribution.py  drift.py  export.py  feature_engineering.py  fingerprint.py  information_theory.py  insights.py  interaction.py  loaders.py  logger.py  missing.py  outliers.py  power.py  quality.py  report.py  statistical_tests.py  statistics.py  synthetic.py  target_analysis.py  themes.py  timeseries.py  utils.py  visualization.py
omni_eda/templates/: advanced_sections.j2  report.html.j2
tests/: conftest.py  test_analyzer.py  test_cleaning.py  test_cli.py  test_correlation.py  test_detection.py  test_export.py  test_feature_engineering.py  test_loaders.py  test_missing.py  test_outliers.py  test_quality.py  test_statistics.py  test_target_analysis.py  test_visualization.py
